src/main/java/com/example/chosim/chosim/common/error/exception/AppException.java
package com.example.chosim.chosim.common.error.exception;


import com.example.chosim.chosim.common.error.ErrorCode;
import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
public class AppException extends RuntimeException {

    private final ErrorCode errorCode;

    public AppException(ErrorCode errorCode, Throwable cause) {
        super(errorCode.getMessage(), cause);
        this.errorCode = errorCode;
    }

    public AppException(ErrorCode errorCode) {
        super(errorCode.getMessage());
        this.errorCode = errorCode;
    }
}